# neuroptimiser

./: .buildinfo  .buildinfo.bak  .gitignore  LICENSE  Makefile  README.md  api-core-models.html  api-core-processes.html  api-core.html  api-solvers.html  api-utils.html  api.html  architecture.html  contributing.html  deploy_docs.sh  genindex.html  index.html  installation.html  objects.inv  publish.yml  py-modindex.html  pyproject.toml  requeriments.txt  requirements-dev.txt  search.html  searchindex.js  usage.html
.github/workflows/: deploy-docs.yml
_sources/: api-solvers.rst.txt  api.rst.txt  architecture.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/examples/: Example0.ipynb.txt
_static/: custom.css
docs/: Makefile  deploy_docs.sh
docs/source/: api-core.rst  api-solvers.rst  api.rst  architecture.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/examples/: Example0.ipynb  Example1.ipynb  Example2.ipynb
examples/: Example0.html  Example1.html  Example1.ipynb  Example2.html  Example2.ipynb
exp/: Example0.ipynb  Example1.ipynb  Example2.ipynb  exp_coco.py  haki.sh
exp/exconf/: hyb-20d.yaml
exp/params/: jun20.txt
neuroptimiser/: __init__.py  solvers.py  utils.py
neuroptimiser/core/: models.py  processes.py
src/neuroptimiser/: solvers.py  utils.py
src/neuroptimiser/core/: models.py  nef.py  processes.py
tests/: test_io_spiking_signal_handler.py  test_utils.py
