[tool.setuptools.packages.find]
include = ["neuroptimiser"]
exclude = ["tests"]
[project]
name = "neuroptimiser"
version = "1.0.0"
description = "A modular and asynchronous framework for neuromorphic optimisation using spike-driven metaheuristics and heuristic-controlled spiking dynamics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
    "numpy==1.25.0",
    "pip>=24.3.1",
    "setuptools>=75.7.0",
    "ioh>=0.3.10",
    "customhys>=1.1.6",
    "pytest>=8.3.4",
    "networkx>=2.8",
    "coco-experiment==2.8.1",
    "cocopp==2.7.3",
    "notebook>=7.3.2",
    "optuna>=4.2.0",
    "optunahub>=0.2.0",
    "cmaes>=0.11.1",
    "torch>=2.5.1",
    "scipy==1.15.3",
    "graphviz>=0.20.3",
    "tikzpy>=0.0.4",
    "lava-nc>=0.10.0",
    "pyqt5==5.15.11",
    "seaborn>=0.13.2",
    "schema>=0.7.7",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-napoleon>=0.7",
    "furo>=2024.8.6",
]
